--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,3 +7,14 @@
   background: url(../images/header-background.jpg) center center no-repeat;
   background-size: cover;
 }
+
+@media (max-width: 1000px) {
+  .hero .image-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .hero .text-container {
+    text-align: center;
+  }
+}
