--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,15 @@
   color: var(--bs-dark);
 }
 
+.navbar {
+  transition: all 0.5s;
+}
+
+.navbar-sticky {
+  opacitiy: 0.9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
 .header {
   background: url(../images/header-background.jpg) center center no-repeat;
   background-size: cover;
