Add other sections and styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,11 @@
   color: var(--bs-dark);
 }
 
-.navbar {
+.btn-outline-light {
+  outline: solid 1px;
+}
+
+.btn .navbar {
   transition: all 0.5s;
 }
 
@@ -15,6 +19,23 @@
 .header {
   background: url(../images/header-background.jpg) center center no-repeat;
   background-size: cover;
+}
+
+.modal-dialog {
+  max-width: 1040px;
+}
+
+.download {
+  background: url(../images/download-background.jpg) center center no-repeat;
+  background-size: cover;
+}
+
+.map iframe {
+  left: 0;
+  top: 0;
+  height: 400px;
+  width: 100%;
+  border: none;
 }
 
 @media (max-width: 1000px) {
