--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -45,4 +45,7 @@ $spacers: (
 
 $line-height-base: 1.7;
 $headings-margin-bottom: $spacer * 1;
+
+$enable-negative-margins: true;
+
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
